# DataManipulator

./: CMakeLists.txt  DataManipulator.cpp  DataManipulator.h  Functions.cpp  Functions.hpp
